# berry-twitch-bot-rust

./: package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/berry_lib/: Cargo.toml
src-tauri/berry_lib/src/: lib.rs
src-tauri/berry_lib/src/file_sys/: app_bin.rs  mod.rs
src-tauri/berry_lib/src/twitch/: twitch_access_token.rs
src-tauri/src/: app_checks.rs  config.rs  login.rs  main.rs
src/store/: root.reducer.ts
src/store/app/: app.actions.ts  app.reducer.ts  app.types.ts
src/ts/: auth.ts  user.ts
src/views/home/: Home.tsx
src/views/welcome/: LoginTwitchBtn.tsx  Welcome.tsx
