
workspace = { members = ["berry_lib"] }
[package]
name = "berry-desk"
version = "0.0.1"
description = "A Tauri App"
authors = ["GeoffKellyNc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
berry_lib = {"path" = "./berry_lib"}
reqwest = "0.12.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
colored = "2.1.0"
directories = "5.0.1"
bincode = "1.3.3"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
